; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/powermac/extr_pfunc_core.c_pmf_parser_write_reg8.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/powermac/extr_pfunc_core.c_pmf_parser_write_reg8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmf_cmd = type { i32 }
%struct.pmf_handlers = type { i32 }

@.str = private unnamed_addr constant [56 x i8] c"pmf: write_reg8(offset: %08x, value: %02x, mask: %02x)\0A\00", align 1
@write_reg8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pmf_cmd*, %struct.pmf_handlers*)* @pmf_parser_write_reg8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pmf_parser_write_reg8(%struct.pmf_cmd* %0, %struct.pmf_handlers* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pmf_cmd*, align 8
  %5 = alloca %struct.pmf_handlers*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.pmf_cmd* %0, %struct.pmf_cmd** %4, align 8
  store %struct.pmf_handlers* %1, %struct.pmf_handlers** %5, align 8
  %9 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %10 = call i32 @pmf_next32(%struct.pmf_cmd* %9)
  store i32 %10, i32* %6, align 4
  %11 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %12 = call i32 @pmf_next32(%struct.pmf_cmd* %11)
  store i32 %12, i32* %7, align 4
  %13 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %14 = call i32 @pmf_next32(%struct.pmf_cmd* %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @LOG_PARSE(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* @write_reg8, align 4
  %20 = load %struct.pmf_cmd*, %struct.pmf_cmd** %4, align 8
  %21 = load %struct.pmf_handlers*, %struct.pmf_handlers** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @PMF_PARSE_CALL(i32 %19, %struct.pmf_cmd* %20, %struct.pmf_handlers* %21, i32 %22, i32 %23, i32 %24)
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @pmf_next32(%struct.pmf_cmd*) #1

declare dso_local i32 @LOG_PARSE(i8*, i32, i32, i32) #1

declare dso_local i32 @PMF_PARSE_CALL(i32, %struct.pmf_cmd*, %struct.pmf_handlers*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
